# project2_Lukashov_dpo_nod

./: .gitignore  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
