[tool.poetry]
name = "project2-lukashov-dpo-nod"
version = "0.1.0"
description = ""
authors = ["Kirill Lukashov <K.A.Lukashov@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
database = "src.primitive_db.main:main"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


